--- a/k8s/redis/deployment.yaml
+++ b/k8s/redis/deployment.yaml
@@ -1,22 +1,22 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: redis
+  name: redis-broker-deployment
   labels:
-    app: redis
+    app: redis-broker-deployment
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: redis
+      app: redis-broker
   template:
     metadata:
       labels:
-        app: redis
+        app: redis-broker
     spec:
       containers:
-        - name: redis
-          image: broker-redis
-          imagePullPolicy: Always  # Always pull from the local registry
+        - name: redis-broker-pod
+          image: redis-broker-img
+          imagePullPolicy: Always
           ports:
             - containerPort: 6379
