--- a/k8s/redis/service.yaml
+++ b/k8s/redis/service.yaml
@@ -1,12 +1,11 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: redis
+  name: redis-svc
 spec:
   selector:
-    app: redis
+    app: redis-broker
   ports:
     - protocol: TCP
       port: 6379      # Service port
       targetPort: 6379  # Container port
-  type: NodePort  # Exposes Redis on a node port (for external access)
