--- a/core/docker-compose.yml
+++ b/core/docker-compose.yml
@@ -1,22 +1,30 @@
 services:
   redis:
-    build: ./redis
+    build:
+      context: ./redis
+      dockerfile: Dockerfile.redis.broker
     ports:
       - "6379:6379"
   consumer1:
-    build: ./consumer1
+    build:
+      context: ./consumer1
+      dockerfile: Dockerfile.consumer1
     volumes:
       - ./logs:/consumer1/logs
     depends_on:
       - redis
   consumer2:
-    build: ./consumer2
+    build:
+      context: ./consumer2
+      dockerfile: Dockerfile.consumer2
     volumes:
       - ./logs:/consumer2/logs
     depends_on:
       - redis
   producer:
-    build: ./producer
+    build:
+      context: ./producer
+      dockerfile: Dockerfile.producer
     volumes:
       - ./logs:/producer/logs
     depends_on:
