Add persistent volume and volume mounts for logging in consumers and producer

--- a/k8s/base/consumer1/deployment.yaml
+++ b/k8s/base/consumer1/deployment.yaml
@@ -18,3 +18,10 @@ spec:
         - name: consumer1-container
           image: consumer1-img
           imagePullPolicy: Always
+          volumeMounts:
+          - mountPath: "/consumer1/logs"
+            name: logs-storage
+      volumes:
+        - name: logs-storage
+          persistentVolumeClaim:
+            claimName: logs-pvc
